[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
html_parser="0.7.0"
scraper = "0.12.0"

[[example]]
name = "json-parse"
path = "examples/json/parse.rs"

[[example]]
name = "html-parse"
path = "examples/html/parse.rs"
