[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
html_parser="0.7.0"
scraper = "0.12.0"
async-ssh2-tokio = "0.7.0"
ssh2 = "0.9"
bollard = "0.16.1"
bytes = "1.6.0"
futures = "*"
quickjs_runtime = { version = "0.15", features = ["console", "setimmediate", "setinterval", "settimeout", "typescript", "quickjs-ng"], default-features = false }
ctrlc = "3.4.0"

[build-dependencies]
cc = "1.0"

[[example]]
name = "json-parse"
path = "examples/json/parse.rs"

[[example]]
name = "html-parse"
path = "examples/html/parse.rs"

[[example]]
name = "ssh-execute"
path = "examples/ssh/execute.rs"

[[example]]
name = "ssh-execute1"
path = "examples/ssh/execute1.rs"


[[example]]
name = "buildx"
path = "examples/buildx/main.rs"

[[example]]
name = "usb"
path = "examples/usb/main.rs"

[[example]]
name = "docker"
path = "examples/docker/pmainrse.rs"

[[example]]
name = "quickjs"
path = "examples/quickjs/main.rs"

[[example]]
name = "ssh-realtime-output"
path = "examples/ssh/realtime_output.rs"

[[example]]
name = "ssh-interruptible-command"
path = "examples/ssh/interruptible_command.rs"

[[example]]
name = "ssh-signal-example"
path = "examples/ssh/ssh_signal_example.rs"


